--- a/index.html
+++ b/index.html
@@ -250,7 +250,9 @@
       <div class="slider w-[100%] mt-[20px] lg:mt-0 !h-[180px] lg:!h-[430px]">
         <div class="swiper mySlider w-[100%] h-[100%]"></div>
       </div>
-      <div class="digitype w-[100%] lg:h-[118px]"></div>
+      <div class="digitype w-[100%] lg:h-[118px]">
+         <div class="subdigitype w-[70%] lg:h-[118px] m-auto pt-[15px] box-border flex flex-row flex-wrap lg:flex-nowrap justify-between items-center gap-y-[7px]" ></div>
+      </div>
       <div
         class="amazing w-[100%] h-auto felx flex-row flex-wrap justify-center mt-[10px] lg:mt-0 lg:p-[20px] overflow-hidden lg:overflow-visible"
       >
